# MLock

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml  cmake-single-platform.yml
include/: colors.h  generate.h  generationConfig.h  library.h  util.h  welcome.h
src/: generate.cpp  generationConfig.cpp  library.cpp  main.cpp  util.cpp  welcome.cpp
